// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popover default(bottom) style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; top: 20px; left: 0px;"
    >
      <div
        class="arrowWrapper"
        style="bottom: 100%; left: 0px; transform: translateX(-50%) rotate(180deg);"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="boxContainer"
      >
        <div
          class="textContent"
        >
          <span
            class="text"
          >
            Content
          </span>
        </div>
        <div
          class="closeButtonIcon"
        >
          <button
            aria-label="Cerrar"
            class="touchable"
            style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
            type="button"
          >
            <svg
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M18.753 5.247a.843.843 0 01.076 1.105l-.076.087L13.192 12l5.561 5.561a.843.843 0 01-1.105 1.268l-.087-.076L12 13.192l-5.561 5.561a.843.843 0 01-1.268-1.105l.076-.087L10.808 12 5.247 6.439A.843.843 0 016.352 5.17l.087.076L12 10.808l5.561-5.561a.843.843 0 011.192 0z"
                fill="#313235"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`popover left style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; left: -508px; top: 0px; transform: translateY(-50%);"
    >
      <div
        class="arrowWrapper"
        style="left: 100%; top: 50%; transform: translateY(-100%) rotate(-90deg); transform-origin: bottom;"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="boxContainer"
      >
        <div
          class="textContent"
        >
          <span
            class="text"
          >
            Content
          </span>
        </div>
        <div
          class="closeButtonIcon"
        >
          <button
            aria-label="Cerrar"
            class="touchable"
            style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
            type="button"
          >
            <svg
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M18.753 5.247a.843.843 0 01.076 1.105l-.076.087L13.192 12l5.561 5.561a.843.843 0 01-1.105 1.268l-.087-.076L12 13.192l-5.561 5.561a.843.843 0 01-1.268-1.105l.076-.087L10.808 12 5.247 6.439A.843.843 0 016.352 5.17l.087.076L12 10.808l5.561-5.561a.843.843 0 011.192 0z"
                fill="#313235"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`popover right style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; left: 20px; top: 0px; transform: translateY(-50%);"
    >
      <div
        class="arrowWrapper"
        style="right: 100%; top: 50%; transform: translateY(-100%) rotate(90deg); transform-origin: bottom;"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="boxContainer"
      >
        <div
          class="textContent"
        >
          <span
            class="text"
          >
            Content
          </span>
        </div>
        <div
          class="closeButtonIcon"
        >
          <button
            aria-label="Cerrar"
            class="touchable"
            style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
            type="button"
          >
            <svg
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M18.753 5.247a.843.843 0 01.076 1.105l-.076.087L13.192 12l5.561 5.561a.843.843 0 01-1.105 1.268l-.087-.076L12 13.192l-5.561 5.561a.843.843 0 01-1.268-1.105l.076-.087L10.808 12 5.247 6.439A.843.843 0 016.352 5.17l.087.076L12 10.808l5.561-5.561a.843.843 0 011.192 0z"
                fill="#313235"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`popover top style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; transform: translateY(-100%); top: -20px; left: 0px;"
    >
      <div
        class="arrowWrapper"
        style="top: 100%; left: 0px; transform: translateX(-50%);"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="boxContainer"
      >
        <div
          class="textContent"
        >
          <span
            class="text"
          >
            Content
          </span>
        </div>
        <div
          class="closeButtonIcon"
        >
          <button
            aria-label="Cerrar"
            class="touchable"
            style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
            type="button"
          >
            <svg
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M18.753 5.247a.843.843 0 01.076 1.105l-.076.087L13.192 12l5.561 5.561a.843.843 0 01-1.105 1.268l-.087-.076L12 13.192l-5.561 5.561a.843.843 0 01-1.268-1.105l.076-.087L10.808 12 5.247 6.439A.843.843 0 016.352 5.17l.087.076L12 10.808l5.561-5.561a.843.843 0 011.192 0z"
                fill="#313235"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
